--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.airlift</groupId>
-    <artifactId>aircompressor</artifactId>
+    <artifactId>aircompressor-safe</artifactId>
     <version>0.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
