--- a/pom.xml
+++ b/pom.xml
@@ -123,9 +123,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.anarres.lzo</groupId>
-            <artifactId>lzo-hadoop</artifactId>
-            <version>1.0.5</version>
+            <groupId>com.hadoop.gplcompression</groupId>
+            <artifactId>hadoop-lzo</artifactId>
+            <version>0.4.21-SNAPSHOT</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
