--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
         <connection>scm:git:git://github.com/airlift/aircompressor.git</connection>
         <developerConnection>scm:git:git@github.com:airlift/aircompressor.git</developerConnection>
         <url>http://github.com/airlift/aircompressor/tree/master</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <properties>
         <project.build.targetJdk>1.8</project.build.targetJdk>
@@ -60,6 +60,13 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>twitter-twttr</id>
+            <url>http://maven.twttr.com/</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -125,7 +132,7 @@
         <dependency>
             <groupId>com.hadoop.gplcompression</groupId>
             <artifactId>hadoop-lzo</artifactId>
-            <version>0.4.21-SNAPSHOT</version>
+            <version>0.4.20</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
