set up env in travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ sudo: false
 before_install:
   - sudo apt-get install -qq liblzo2-dev
 
+env:
+  - C_INCLUDE_PATH=/usr/include/lzo LIBRARY_PATH=/usr/lib/x86_64-linux-gnu
+
 script:
   - travis_wait 20 mvn test
 
