--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
             <groupId>org.lz4</groupId>
             <artifactId>lz4-java</artifactId>
             <version>1.8.0</version>
-            <scope>test</scope>
+            <!-- TODO move to test scope once we have XxHash32 -->
         </dependency>
 
         <dependency>
