--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>io.airlift</groupId>
     <artifactId>aircompressor</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>aircompressor</name>
@@ -33,7 +33,7 @@
         <connection>scm:git:git://github.com/airlift/aircompressor.git</connection>
         <developerConnection>scm:git:git@github.com:airlift/aircompressor.git</developerConnection>
         <url>https://github.com/airlift/aircompressor/tree/master</url>
-      <tag>2.0.2</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
