improve fuzz tests

--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,1 +1,1 @@
-jazzer.instrumentation_includes=io.airlift.compress.**
+jazzer.instrumentation_includes=io.airlift.compress.**:org.apache.commons.compress.**:io.**:org.xerial.snappy.**:org.lz4.**
