Add native XXHash3 support
Adds XXH3 hash function with 64-bit and 128-bit variants via FFM bindings.
Includes streaming support for incremental hashing.

--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,13 @@
                     <configuration>
                         <target>${project.build.targetJdk}</target>
                         <release combine.self="override" />
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.openjdk.jmh</groupId>
+                                <artifactId>jmh-generator-annprocess</artifactId>
+                                <version>${dep.jmh.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
                     </configuration>
                 </plugin>
                 <plugin>
