--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.airlift</groupId>
         <artifactId>airbase</artifactId>
-        <version>202</version>
+        <version>349</version>
     </parent>
 
     <groupId>io.airlift</groupId>
@@ -63,11 +63,6 @@
 
         <!-- do not run tests on release -->
         <air.release.preparation-goals>clean verify -DskipTests</air.release.preparation-goals>
-
-        <!-- Stage files to the local directory, njord will push them to central -->
-        <altDeploymentRepository>id::default::njord:</altDeploymentRepository>
-        <njord.publishingType>automatic</njord.publishingType>
-        <njord.waitForStates>true</njord.waitForStates>
     </properties>
 
     <dependencies>
@@ -91,6 +86,7 @@
         <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
+            <classifier>classes</classifier>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -170,20 +166,7 @@
                         </annotationProcessorPaths>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>eu.maveniverse.maven.plugins</groupId>
-                    <artifactId>njord</artifactId>
-                    <version>0.8.7</version>
-                </plugin>
             </plugins>
         </pluginManagement>
-
-        <extensions>
-            <extension>
-                <groupId>eu.maveniverse.maven.njord</groupId>
-                <artifactId>extension3</artifactId>
-                <version>0.8.7</version>
-            </extension>
-        </extensions>
     </build>
 </project>
